--- a/examples/source/index.css
+++ b/examples/source/index.css
@@ -2,9 +2,21 @@
   display: table;
 }
 
-.form-values strong {
-  display: table-cell;
+.form-values {
+  display: table;
+}
+
+.form-values div {
+  display: inline-block;
   padding: 10px;
+  margin-left: 20px;
+}
+
+.form-values div span {
+  display: table-cell;
+  padding-top: 10px;
+  font-weight: bold;
+  color: #006699;
 }
 
 input[type="text"] {
