Add support for variable-length forms (FormArray)

--- a/examples/source/index.css
+++ b/examples/source/index.css
@@ -19,6 +19,15 @@
   color: #006699;
 }
 
+.form-values .arrays {
+  display: block;
+  clear: both;
+}
+
+.form-values .arrays div {
+  display: inline-block;
+}
+
 input[type="text"] {
   padding: 10px;
   border-radius: 6px;
