Resolve bug that prevented nested arrays from working properly (thank you @dancancro) Add nested array example

--- a/examples/source/index.css
+++ b/examples/source/index.css
@@ -24,8 +24,8 @@
   clear: both;
 }
 
-.form-values .arrays div {
-  display: inline-block;
+.form-values .arrays > div {
+  border: 1px solid #666;
 }
 
 input[type="text"] {
